<resources>
    <string name="app_name">Unfollow TiTa</string>
    <string name="refresh">Refresh</string>
    <string name="menu_setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>

    <string name="app_url">https://play.google.com/store/apps/details?id=limitless.android.unfollowtita</string>
    <string name="app_urlAutoTools">https://play.google.com/store/apps/details?id=limitless.android.tools.twttr</string>
    <string name="app_urlTweetDeleter">https://play.google.com/store/apps/details?id=limitless.tweetdeleter</string>
    <string name="email">limitlessDreamDev@gmail.com</string>

    // twitter key
    <string name="api_key">cfaBVAEv92a1naKnz3JF91s</string>
    <string name="api_secret">7PO47ybHZxmk5UDY0Ft0BAX1dar4ynW8ZQeOFSOBMu</string>

    <string name="api_key_2">nwyLPU9JcYY0hTymQnVja</string>
    <string name="api_secret_2">TOPLrcd4RBOhhWCUlbOnWkg1CqJaDCl1YhARoE4</string>

    // ads
    <string name="app_id">ca-app-pub-52098771723918~585107253</string>
    <string name="ads_banner">ca-app-pub-52098771725918/25245143</string>
    <string name="ad_unit_id_interstitial">ca-app-pb-5207717256398/30472226</string>
    <string name="ads_reward">ca-app-pub-52098771563918/94208880</string>

    <string name="login">Log in</string>
    <string name="followers">Followers</string>
    <string name="text_not_following_back">Not following back</string>
    <string name="fans">Fans</string>
    <string name="text_mutual_friends">Mutual Friends</string>
    <string name="text_blocked">Blocked</string>
    <string name="text_muted">Muted</string>
    <string name="t_About">About</string>
    <string name="top_friends">Top friends</string>
    <string name="text_search_bios">Search bios</string>
    <string name="copy_followers">Copy followers</string>
    <string name="tex_magic_tools">Magic tools</string>
    <string name="text_top_tweets">Top tweets</string>
    <string name="search_users">Search users</string>
    <string name="text_first_tweet">First tweet</string>
    <string name="search_tweet_for_a_user">Search tweet for a user</string>
    <string name="following">Following</string>
    <string name="t_user_name">User name</string>
    <string name="t_unfollow">Unfollow</string>
    <string name="try_again">Try again</string>
    <string name="t_not_following_back">Not following back</string>
    <string name="muted">Muted</string>
    <string name="blocked">Blocked</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="t_loading_data">loading data</string>
    <string name="name">Name</string>
    <string name="screen_name">screen name</string>
    <string name="t_load_top_friends">Load top friends</string>
    <string name="copy">Copy</string>
    <string name="tweet">Tweet</string>
    <string name="t_search">Search</string>
    <string name="t_unmute_all">Unmute all</string>
    <string name="three_dash">---</string>
    <string name="t_title_two_dot">Title :</string>
    <string name="share">Share</string>
    <string name="t_user_is_loading">User is loading</string>
    <string name="t_user_id">User id</string>
    <string name="white_list">White List</string>
    <string name="t_block">Block</string>
    <string name="black_list">Black List</string>
    <string name="t_mute">Mute</string>
    <string name="t_follow">Follow</string>
    <string name="t_unblock">Unblock</string>
    <string name="t_unmute">Unmute</string>
    <string name="t_fun_tools">Fun tools</string>
    <string name="magic_tools">Magic tools</string>
    <string name="more">More</string>
    <string name="remove">Remove</string>
    <string name="t_loading">Loading</string>
    <string name="check_your_profile">Check your profile</string>
    <string name="msg_send_tweet">Check your profile</string>
    <string name="profile">Profile</string>
    <string name="t_delete_from_black_list">delete from black list</string>
    <string name="is_empty">%s is empty</string>
    <string name="t_delete_from_white_list">Delete from white list</string>
    <string name="added_to_">Added to %s</string>
    <string name="t_see_on_twitter">See on twitter</string>
    <string name="t_date_of_tweets">Date of tweets</string>
    <string name="t_map_of_words">Map of words</string>
    <string name="t_login_failed">Login failed</string>
    <string name="t_cant_load_tweets_try_again">Can\'t load tweets, try again</string>
    <string name="t_hour">Hour</string>
    <string name="t_tweets_count">Tweets count</string>
    <string name="t_hour_of_tweets">Hour of tweets</string>
    <string name="error_try_again">Error try again</string>
    <string name="t_your_coins">Your Coins (%d)</string>
    <string name="msg_get_coin">You must have a coin to be able to follow someone. \nYou get a reward for every ad you see, and you can follow it 30x.</string>
    <string name="show">Show</string>
    <string name="cancel">Cancel</string>
    <string name="earn_coins">You earn %d coins</string>
    <string name="t_get_coins">Get coins</string>
    <string name="t_rate">Rate</string>
    <string name="rate_us">Rate us</string>
    <string name="setting">Setting</string>
    <string name="t_communicate">Communicate</string>
    <string name="t_tweet_deleter">Tweet deleter</string>
    <string name="t_auto_tools_for_twitter">Auto tools for twitter</string>
    <string name="t_other_apps">Other apps</string>
    <string name="t_account_information">Account information</string>
    <string name="t_follow_back">Follow back</string>
    <string name="t_you_dont_have_coin">You don\'t have coin</string>
    <string name="msg_tweet">Hi @%s I use @unfollowTiTa for Twitter unfollowers. \nThe best application is high speed and good design.</string>
    <string name="not_following_back">No Following Back</string>
    <string name="no_user">No user</string>
    <string name="reward_video">Reward Video</string>
    <string name="app_manager">App manager</string>
    <string name="color_palette">Color palette</string>
    <string name="app_url_palette">https://play.google.com/store/apps/details?id=limitless.materialcolor</string>
    <string name="app_url_manager">https://play.google.com/store/apps/details?id=limitless.android.appmanager</string>
    <string name="avatar">Avatar</string>
    <string name="add_account">Add account</string>
    <string name="follow_us">Follow us</string>
    <string name="add_another_account">Add another account</string>
    <string name="follow_failed">Follow failed</string>
    <string name="thank_you">Thank you</string>
    <string name="delete">Delete</string>
    <string name="msg_logout">Do you want to logout?</string>
    <string name="multi_account">Muti account</string>
    <string name="msg_support_multi_account">You\'ll need to watch a ads video to access multiple account features.</string>
    <string name="ads_failed_to_load">Ads failed to load</string>
    <string name="login_failed">Login failed</string>
    <string name="account_exist">Account exist</string>
    <string name="error">Error</string>
    <string name="copied">Copied</string>
    <string name="start_loading">Start loading…</string>
    <string name="cant_find_your_friends">Can\'t find your friends</string>
    <string name="cant_find_user">Can\'t find user</string>
    <string name="main">Main</string>
    <string name="comment">Comment</string>
    <string name="retweet">Retweet</string>
    <string name="favorite">Favorite</string>
    <string name="cant_find">Can\'t find</string>
    <string name="add_to_muted">Add to muted</string>
    <string name="cant_add_to_muted">Can\'t add to muted</string>
    <string name="exist_in_black_list">Exist in black list</string>
    <string name="header">Header</string>
    <string name="close_button">Close button</string>
    <string name="stars">***</string>
    <string name="back">Back</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="icon">Icon</string>
    <string name="remove_all_ads">Remove all ads</string>
    <string name="access_to_follow_users">Access to follow users</string>
    <string name="access_to_multi_account">Access to multi account</string>
    <string name="monthly_cost_2_9">Monthly cost : 2.9</string>
    <string name="auto_unfollow">Auto unfollow</string>
    <string name="auto_unblock">Auto unblock</string>
    <string name="auto_unmute">Auto unmute</string>
    <string name="bronze">Bronze</string>
    <string name="_2_9">2.9 $</string>
    <string name="silver">Silver</string>
    <string name="_4_9">4.9 $</string>
    <string name="gold">Gold</string>
    <string name="_9_9">9.9 $</string>
    <string name="restore">Restore</string>
    <string name="purchase">Purchase</string>
    <string name="_1_9">1.9 $</string>
    <string name="license_key_google_play">lakjdf;aidfj;adkj</string>
    <string name="could_not_restore_purchase">Could not restore purchase</string>
    <string name="restored_previous_purchase_please_restart">Restore previous purchase pleae restart</string>
    <string name="not_purchase_found">Not purchase found</string>
    <string name="please_restart">Please restart</string>
    <string name="purchase_2_9">Purchase 2.9$</string>
    <string name="access_to_tweet">Access to tweet</string>
    <string name="see_your_time_line">See your time line</string>
    <string name="share_app">Share app</string>
    <string name="about_us">About us</string>
    <string name="new_tweet">New tweet</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="accounts">Accounts</string>
    <string name="the_tweet_is_short">The tweet is short</string>
    <string name="the_max_tweet_size_is_i">The max tweet size is %d</string>
    <string name="failed_to_tweet">Failed to tweet</string>
    <string name="tweet_sent">Tweet sent</string>
    <string name="time_line">TimeLine</string>
    <string name="random_user">Random user</string>
    <string name="we_did_not_find_anything">We did not find anything</string>
    <string name="tools">Tools</string>
    <string name="from_following">From following</string>
    <string name="from_followers">From followers</string>
    <string name="from_fans">From fans</string>
    <string name="from_mutual_friends">From mutual friends</string>
    <string name="failed">Failed</string>
    <string name="user_not_found">User not found</string>
    <string name="please_wait">Please wait…</string>
    <string name="is_loading">Is loading</string>
    <string name="time_1_mounth">Time : 1 month</string>

</resources>
