<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TopFriendsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/ads_banner"
            android:id="@+id/adView"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_topFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:layout_margin="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    tools:text="@string/msg_get_coin"
                    android:padding="8dp"
                    android:id="@+id/tvTopFriends"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        app:backgroundTint="@color/colorPrimary"
                        android:id="@+id/button_copy"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/copy"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_tweet"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/tweet"
                        app:backgroundTint="@color/colorPrimary"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <include
        android:id="@+id/progress"
        layout="@layout/progress"/>

</FrameLayout>