<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="LARGE_BANNER"
            android:id="@+id/adView"
            ads:adUnitId="@string/ads_banner"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:id="@+id/recyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_user"
            tools:itemCount="10"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/linearLayout_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="@dimen/large_icon_height"
            android:layout_height="@dimen/large_icon_height"
            android:src="@drawable/ic_empty_512dp"/>

        <TextView
            android:layout_marginTop="@dimen/margin_fab"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_did_not_find_anything"/>

    </LinearLayout>

    <include
        android:id="@+id/progress"
        layout="@layout/progress"/>

</FrameLayout>