<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchUsersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/ads_banner"
            android:id="@+id/adView"/>

        <EditText
            android:minHeight="?actionBarSize"
            android:layout_margin="8dp"
            android:gravity="center"
            android:hint="@string/t_user_id"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:id="@+id/editText"/>

        <com.google.android.material.button.MaterialButton
            app:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/t_search"
            android:id="@+id/button_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_user"
            tools:itemCount="10"
            android:scrollbars="vertical" />

    </LinearLayout>

    <include
        android:visibility="invisible"
        android:id="@+id/progress"
        layout="@layout/progress"/>

</FrameLayout>